force-app/main/default/objects/Library__c/Library__c.object-meta.xml
<CustomObject>
    <label>Library</label>
    <nameField>
        <displayFormat>lib-{0000}</displayFormat>
        <label>Library No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Library</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>