force-app/main/default/objects/Library__c/fields/Library_Name__c.field-meta.xml
<CustomField>
    <fullName>Library_Name__c</fullName>
    <label>Library Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>