force-app/main/default/objects/Library__c/fields/Training_Level__c.field-meta.xml
<CustomField>
    <fullName>Training_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Level</label>
    <referenceTo>Library__c</referenceTo>
    <relationshipLabel>Library</relationshipLabel>
    <relationshipName>Library</relationshipName>
    <type>Lookup</type>
</CustomField>